--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "homepage": "https://github.com/swarovsky-public/core",
     "type": "library",
     "license": "MIT",
-    "version": "1.0.0-alpha",
+    "version": "1.0.0",
     "authors": [
         {
             "name": "swaro",
@@ -18,18 +18,19 @@
             "Swarovsky\\Core\\": "src/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": "^7.4",
         "ext-json": "*",
         "bacon/bacon-qr-code": "^2.0",
         "bensampo/laravel-enum": "^1.38",
         "intervention/image": "^2.5",
+        "laravel/socialite": "^4.4",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "pragmarx/google2fa": "^8.0",
         "pragmarx/google2fa-laravel": "^1.3",
         "pragmarx/google2fa-qrcode": "^1.0",
         "spatie/laravel-permission": "^3.13",
-        "swarovsky/core": "dev-master",
-        "laravel/socialite": "^4.4"
+        "swarovsky/core": "dev-master"
     }
 }
