--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "pragmarx/google2fa": "^8.0",
         "pragmarx/google2fa-laravel": "^1.3",
         "pragmarx/google2fa-qrcode": "^1.0",
-        "spatie/laravel-permission": "^3.13"
+        "spatie/laravel-permission": "^3.13",
+        "laravel/ui": "^2.0"
     }
 }
