--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "intervention/image": "^2.5",
         "laravel/socialite": "^4.4",
         "league/flysystem-aws-s3-v3": "^1.0",
+        "orangehill/iseed": "^2.6",
         "pragmarx/google2fa": "^8.0",
         "pragmarx/google2fa-laravel": "^1.3",
         "pragmarx/google2fa-qrcode": "^1.0",
